# HydroChal-ROS2

./: .gitignore  .gitmodules  README.md  launch.xml  now  sensors_test_launch.xml
src/hydrochal/: CMakeLists.txt  package.xml
src/hydrochal/launch/: all_launch.py
src/hydrochal/src/: Flap.py  IMU.cpp  IMU_test.cpp  Rudder.py  WeatherStation.cpp  regulation.py  rx.cpp  stationkeep.py  test.py  untitled.py  utils.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Command (copy).msg  Command.msg  Date.msg  GPS.msg  HEADING.msg  ObstacleList.msg  Time.msg  WIND.msg  WideObstacle.msg
src/zed/: CMakeLists.txt  README.md  package.xml
src/zed/launch/: zed.launch
src/zed/scripts/: obstacle_detector.py  tools.py  video_proccessing.py
src/zed/settings/: SN3042.conf  SN3491.conf  zed_oc_stereo.yaml
src/zed/src/: video_recorder.cpp  zed_oc_depth_stereo.cpp
